fix: remove extra padding from banner in hero mode

--- a/src/style-banner.scss
+++ b/src/style-banner.scss
@@ -153,6 +153,7 @@ img {
       align-items: unset;
       text-align: left;
       width: 50%;
+      padding-left: 0;
     }
 
     .contentWrapper {
